--- a/css/scss/base/_settings.scss
+++ b/css/scss/base/_settings.scss
@@ -1,10 +1,14 @@
 // COLORS
 // ---------------------------
-
+$blue : #19aff5;
 
 // FONTS
 // ---------------------------
+$rr: 'rr';
+$rm: 'rm';
+$rb: 'rb';
 
+$bsb: 'bsb';
 
 
 // RESPONSIVE
@@ -14,9 +18,10 @@
 
 // TYPOGRAPHIC
 // ---------------------------
-html, body                    	{   height: 100%;}
-p                             	{   }
-h1, h2, h3, h4, h5, p         	{   }
+html, body                    	{   height: 100%; font-family: $rr;}
+p                             	{   font-family: $rr; color: #333; }
+h1, h2, h3, h4, h5         	    {   font-family: $rm; color: #333;  }
+span                            {	color: #333;}
 .white                          {	color: #FFF;}
 
 
@@ -25,7 +30,7 @@ h1, h2, h3, h4, h5, p         	{   }
 // lAYOUT
 // ---------------------------
 
-.wrapper                      	{   width: 1200px;
+.wrapper                      	{   width: 1140px;
 								   	margin: 0 auto;
                                    	text-align: center;
                               	}
