--- a/css/scss/general.scss
+++ b/css/scss/general.scss
@@ -15,6 +15,36 @@
 
 @import 'parts/popup';
 
+section:not(.offer) {
+    padding: 75px 0; 
+}
+
+h1 {
+    color: #FFF; 
+    font: 40px $rr;
+    text-transform: uppercase; 
+    span {
+        color: $blue; 
+    }
+}
+
+h2 {
+    font: 40px $rm; 
+}
+
+.aboutInfo__item__img,
+.tel:before {
+    background-image: url("../images/icons_1.png")
+}
+.icon-ab-1 { background-position: -10px -0px; width: 70px; height: 68px; }
+.icon-ab-2 { background-position: -10px -78px; width: 70px; height: 68px; }
+.icon-ab-3 { background-position: -10px -156px; width: 62px; height: 70px; }
+.icon-ab-4 { background-position: -10px -236px; width: 34px; height: 70px; }
+.icon-shield { background-position: -10px -316px; width: 28px; height: 30px; }
+.icon-check { background-position: -48px -316px; width: 18px; height: 18px; }
+.icon-person { background-position: -48px -344px; width: 17px; height: 19px; }
+.icon-tel { background-position: -54px -236px; width: 11px; height: 19px; }
+
 
 /*=====================================================================================*/
 /*  HEADER STYLES  */ 
@@ -23,113 +53,76 @@ header {
     @include position(absolute, 0, auto, auto, 0);
     width: 100%;
     z-index: 100;
-    background: #fff;
-    margin: 0;
+    margin: 0px;
     @include transition(all, .4s);
+    .wrapper {
+        width: 1280px;
+        @include flex();
+    }
     
         /*.................media.............*/
-        @include m800 {
+        @include m1000 {
             @include position(fixed, 0, auto, auto, -100%);
             width: 260px !important;
             height: 100%;
             text-align: center;
             background-color: #fff;
             margin-top: 0;
-            padding: 20px 0;
+            padding: 40px 0;
             z-index: 100;
              
             &.active { left: 0;}
             .wrapper {
-                   @include flexDirection(column);
+                   display: block;
                    width: 100%;
             }
         }
         /*.............end media..............*/
 
-
-    .header__top {
-        padding: 7px 0;
-        color: #FFF;
-        .wrapper {
-            @include flex();
-        }
-        .divide {
-            height: 35px;
-            width: 1px;
-            vertical-align: middle;
-            background-color: #1E5D75;
-        }
-    }
-    
-    .header__bottom {
-        padding: 30px 0;
-        background-color: #fff;
-        .wrapper {
-            @include flex();
-        }
-    }
 }
 
-
-/* ------------------------------------ */
-/*  LOGO STYLES  */
-
-.logo {
-    position: relative;
-    display: block;
-    & img {
-        height: 100%;
-        display: inline-block;
-        vertical-align: middle;   
-    }
-    & p {
-        display: inline-block;
-        vertical-align: middle;
-        padding-left: 18px;
-        text-transform: uppercase;
-        text-align: left;
-        padding-top: 6px;
-        span{
-         display: inline-block;
-        }
-        strong {
-            color: #000;
-            text-transform: none;
-            display: block;
-            margin-top: 5px;
-            padding-left: 2px;
-        }
-    }
+.logo,
+.contactUs {
+    width: 210px; 
 }
-
 
 /* ------------------------------------ */
 /*  NAV STYLES  */
 
-nav ul {
-    @include flex();
-    list-style-type: none;
-    a {
-        display: inline-block;
-        margin: 0 20px;
-        text-decoration: none;
-        @include transition(all, .2s);             
-        &:hover {}
-    }
+nav {
+    ul {
+        list-style-type: none;
+        margin: 0; 
+        @include flex();
+        a {
+            display: inline-block;
+            margin: 0 20px;
+            color: #fff; 
+            text-decoration: none;
+            line-height: 65px;
+            border-top: 2px solid transparent;  
+            text-transform: uppercase;
+            @include transition(all, .2s);             
+            &:hover  {border-top: 2px solid $blue;}
+        }
 
         /*.................media.............*/
-        @include m800 { 
+        @include m1000 { 
             display: block;
             height: 100%;
             overflow: scroll;
             position: relative;
             li a  {   
-                margin: 0 0 25px 0;
+                margin: 0 0 20px 0;
+                line-height: 65px;
+                border-top: 2px solid transparent;  
+                text-transform: uppercase;
                 &.active {color: #ECCC1D;}
-                &:hover  {background: transparent;}
+                &:hover  {border-top: 2px solid $blue;}
             } 
         }
         /*.............end media.............*/
+    }
 }
 
 
@@ -170,7 +163,7 @@ nav ul {
     &.active .middle_line  {   width: 0; left: 50%;}
 
         /*.................media.............*/
-        @include m800 {
+        @include m1000 {
             display: block;
         }
         /*..............end media.............*/
@@ -186,21 +179,313 @@ nav ul {
 
 
 .offer {
-    height: 100%;
-    min-height: 650px;
-    max-height: 900px;
-    background: url('../images/law.jpg') no-repeat center center;
+    height: 740px;
+    background: url('../images/offerBg.jpg') no-repeat center center;
     background-size: cover;
     padding: 200px 0 0 0;
     position: relative;
 
 
-    .offerInfo {
+    .wrapper {
         height: 100%;
-        @include flex($alignI: center, $justify: space-around, $direction: column);
+        @include flex($alignI: center, $justify: center, $direction: column);
         z-index: 2;
         position: relative;
         text-align: center;
     }
+    
+    .blueInfo {
+        margin-top: 75px;
+        color: $blue;  
+        margin-bottom: 180px; 
+        font: 32px $rm; 
+    }
+    .subTitle {
+        margin-top: 30px; 
+        color: #FFF; 
+        font: 32px $rr; 
+    }
 
+    .offerForm {
+        position: absolute;
+        bottom: 0;
+        left: 0; right: 0;
+        margin: auto; 
+        width: 745px;
+        padding: 35px;
+        background-color: rgba(0,0,0, .8);   
+        @include flex();
+        p {
+            width: 430px;
+            color: #FFF; 
+            text-align: left;
+            font: 19px $rm; 
+        }
+    }
+}
+
+.logo {
+    span {
+        font: 32px $bsb;
+        text-transform: uppercase;
+        color: $blue;
+        i {
+            margin-left: 4px; 
+        }  
+    }
+}
+
+.contactUs  {
+    text-align: right;
+    color: #FFF; 
+    .tel {
+        font:  21px $rm;
+        color: #FFF; 
+        &:before {
+            width: 11px;
+            height: 19px;
+            content: "";
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 7px; 
+            background-position: -54px -236px;   
+            margin-top: -4px; 
+        }
+    }
+    .order {
+        color: $blue;
+        font: 19px $rm;
+        border-bottom: 1px dashed $blue;  
+    }
+}
+
+/*=====================================================================================*/
+/*  About STYLES  */ 
+.about {
+    .wrapper {
+        width: 800px;
+    }
+}
+.aboutInfo {
+    @include flex($justify: space-around, $wrap: wrap);
+    margin-top: 50px; 
+    &__item {
+        width: 50%;
+        margin: 0 0px 60px;
+        &__img {
+            display: block;
+            height: 70px; width: 70px; 
+            margin: 0 auto 20px; 
+            img {
+                max-height: 100%;
+                max-width: 70px;  
+            } 
+        } 
+        span {
+            display: inline-block;
+            width: 280px; 
+            font: 21px $rr; 
+            b {
+                font-family: $rm; 
+            }
+        }
+        &:nth-of-type(1){
+            .aboutInfo__item__img {
+                background-position: -10px -0px;
+            }
+        }
+        &:nth-of-type(2){
+           .aboutInfo__item__img  {
+                background-position: -10px -78px;
+           }
+        }
+        &:nth-of-type(3){
+           .aboutInfo__item__img  {
+                background-position: -10px -156px;
+           }
+        }
+        &:nth-of-type(4){
+            .aboutInfo__item__img {
+                width: 40px; 
+                background-position: -10px -236px;
+            }
+        }
+    }
+}
+
+
+
+/*=====================================================================================*/
+/*  Why STYLES  */ 
+
+.why {
+    background: url('../images/whyBg.jpg') no-repeat center center;
+    background-size: cover;
+    .wrapper {
+        position: relative;
+        @extend %clearfix;
+        width: 940px; 
+        &:before {
+            content: "";
+            width: 2px;
+            display: block;
+            background-color: rgba(255,255,255, .3);
+            left: 0; right: 0;
+            margin: auto;
+            top: 0;  
+            position: absolute;
+            height: 100%;   
+        }
+    
+        ul {
+            width: 50%;
+            float: left;
+            padding: 0 40px;
+            list-style-type: none;
+            h3 {
+                text-align: center;
+                color: #FFF;
+                font: 28px $rm;  
+                margin-bottom: 23px; 
+            }
+            li {
+                text-align: left;
+                color: #FFF;
+                font: 19px $rr;  
+                border-left: 5px solid $blue;
+                padding-left: 15px;  
+                margin-bottom: 28px; 
+            }
+        }
+    }
+}
+
+.button {
+    background-color: $blue;
+    height: 40px;
+    text-align: center;
+    color: #FFF;
+    padding: 0 18px;
+    border: none;
+    box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.1);
+    -webkit-border-radius: 4px; 
+        border-radius: 4px;     
+}
+
+/*=====================================================================================*/
+/*  advantage STYLES  */ 
+
+.advantage {
+    background: url('../images/blueBg.jpg') no-repeat center center;
+    background-size: cover;
+    h2,
+    p {
+        color: #FFF; 
+        font-size: 32px;  
+    }
+    h2 {
+        text-transform: uppercase;
+    }
+    p {
+        margin-top: 30px;
+        font-size: 32px;  
+    }
+}
+
+
+/*=====================================================================================*/
+/*  advantage STYLES  */ 
+
+.options {
+     background: url('../images/optionsBg.jpg') no-repeat center center;
+    background-size: cover;
+}
+.repairOptions {
+    @include flex($justify: space-around, $wrap: wrap);
+    margin-top: 55px; 
+    &__item {
+        width: 280px;
+        &__img {
+            height: 175px; 
+            margin-bottom: 20px;
+            position: relative;
+            overflow: hidden;
+            img {
+                width: 100%; 
+                display: block;
+            }
+            .more {
+                position: absolute;
+                left: 0; right: 0;
+                bottom: 0; top: 0;
+                margin: auto;
+                width: 140px;
+                height: 35px;  
+                opacity: 0; 
+                border: 2px solid #fff; 
+                @include transition(all, .2s); 
+                background: transparent; 
+                color: #FFF; 
+                font: 19px $rr;
+                z-index: 2;  
+                padding-bottom: 4px; 
+            } 
+            &:after {
+                content: "";
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute; 
+                left: 0;
+                top: 0; 
+                background-color: rgba(0,0,0, .5);   
+                opacity: 0; 
+                @include transition(all, .2s);
+            }
+        } 
+        span {
+            display: inline-block;
+            margin-bottom: 15px; 
+        }
+        &:hover {
+            .repairOptions__item__img {
+                .more {
+                    opacity: 1; 
+                }
+                &:after {
+                    opacity: 1; 
+                }
+            }
+        }
+    }
+}
+
+
+/*=====================================================================================*/
+/*  why profitable STYLES  */ 
+
+.whyProfitable {
+    background: url('../images/profitable.jpg') no-repeat center center;
+    background-size: cover;
+    .wrapper {
+        width: 940px; 
+    }
+    ul {
+        margin-top: 45px; 
+        list-style-type: none; 
+        h3 {
+            text-align: left;
+            color: #FFF;
+            font: 28px $rm;  
+            margin-bottom: 23px; 
+        }
+        li {
+            text-align: left;
+            color: #FFF;
+            font: 19px $rr;  
+            border-left: 5px solid $blue;
+            padding-left: 25px;  
+            margin-bottom: 50px; 
+        }
+    }
 }
