--- a/css/scss/general.scss
+++ b/css/scss/general.scss
@@ -13,6 +13,10 @@
 
 /*Parts styles*/
 
+@import 'parts/scheme';
+@import 'parts/questions';
+@import 'parts/contacts';
+@import 'parts/footer';
 @import 'parts/popup';
 
 section:not(.offer) {
