--- a/css/scss/general.scss
+++ b/css/scss/general.scss
@@ -25,16 +25,25 @@ h1 {
     text-transform: uppercase; 
     span {
         color: $blue; 
+        font-family: $rm; 
     }
 }
-
+.heading {
+    color: #FFF;
+    font-size: 32px; 
+    span {
+        color: $blue; 
+        font-family: $rm; 
+    }
+}
 h2 {
     font: 40px $rm; 
 }
 
 .aboutInfo__item__img,
 .tel:before,
-.tabs__item__info ul li:before {
+.tabs__item__info ul li:before,
+.inputWrap:before {
     background-image: url("../images/icons_1.png")
 }
 .icon-ab-1 { background-position: -10px -0px; width: 70px; height: 68px; }
@@ -496,7 +505,8 @@ nav {
 
 
 /*=====================================================================================*/
-/*  Offices repair STYLES  */ 
+/*  TABS STYLES  */ 
+
 .tabsChange {
     list-style-type: none;
     li {
@@ -608,5 +618,72 @@ nav {
         button {
             display: none;
         }
+    }
+}
+
+
+/*=====================================================================================*/
+/*  FORM SECTION STYLES  */ 
+
+.formSec {
+    background: url('../images/formBg.jpg') no-repeat center center;
+    background-size: cover;
+    form {
+        margin-top: 60px; 
+        width: 840px; 
+    }
+}
+
+form {
+    @include flex();
+    margin: 0 auto; 
+    .inputWrap {
+        display: inline-block;
+        background-repeat: no-repeat;
+        position: relative;
+        &:before {
+            width: 17px;
+            height: 19px;
+            content: "";  
+            background-repeat: no-repeat;
+            position: absolute;
+            top: 12px;
+            left: 12px;
+            display: block;  
+        }
+        &:after {
+            width: 1px;
+            height: 30px;
+            content: "";  
+            position: absolute;
+            top: 7px;
+            left: 36px;
+            background-color: #FFF; 
+            display: block;  
+        }
+        &--tel {
+            &:before {
+                background-position: -54px -236px;
+            }
+        }
+        &--name {
+            &:before {
+                background-position: -48px -344px;
+            }
+        }
+    }
+    input {
+        width: 260px;
+        border: 1px solid #fff;
+        background: transparent;
+        color: #FFF;  
+        height: 45px;
+        padding-left: 50px;  
+        -webkit-border-radius: 4px; 
+        border-radius: 4px; 
+        font: 17px $rr; 
+    }
+    .button {
+        height: 45px; 
     }
 }
