--- a/css/scss/general.scss
+++ b/css/scss/general.scss
@@ -22,6 +22,9 @@
 
 section:not(.offer) {
     padding: 75px 0; 
+    @include m750 {
+        padding: 40px 0; 
+    }
 }
 
 h1 {
@@ -32,6 +35,18 @@ h1 {
         color: $blue; 
         font-family: $rm; 
     }
+    @include m1000 {
+        font-size: 36px; 
+    }
+    @include m750 {
+        font-size: 32px; 
+        br {
+            display: none
+        }
+    }
+    @include m600 {
+        font-size: 28px; 
+    }
 }
 .heading {
     color: #FFF;
@@ -40,9 +55,27 @@ h1 {
         color: $blue; 
         font-family: $rm; 
     }
+    @include m1000 {
+        font-size: 28px; 
+    }
+    @include m750 {
+        font-size: 24px; 
+    }
+    @include m600 {
+        font-size: 20px; 
+    }
 }
 h2 {
     font: 40px $rm; 
+    @include m1000 {
+        font-size: 32px; 
+    }
+    @include m750 {
+        font-size: 28px; 
+    }
+    @include m600 {
+        font-size: 24px; 
+    }
 }
 
 .aboutInfo__item__img,
@@ -76,8 +109,16 @@ header {
     }
     
         /*.................media.............*/
+        @include m1300 {
+            .wrapper {
+                width: 100%; 
+                padding: 0 10px; 
+            }
+        }
         @include m1000 {
             @include position(fixed, 0, auto, auto, -100%);
+            -webkit-box-shadow: 0 0 10px rgba(0,0,0, .4) ;
+            box-shadow: 0 0 10px rgba(0,0,0, .4) ;
             width: 260px !important;
             height: 100%;
             text-align: center;
@@ -117,22 +158,38 @@ nav {
             line-height: 65px;
             border-top: 2px solid transparent;  
             text-transform: uppercase;
+            font-size: 17px; 
             @include transition(all, .2s);             
             &:hover  {border-top: 2px solid $blue;}
         }
 
+        /*.................media.............*/
+        @include m1300 {
+            a {
+                margin: 0 10px;
+                font-size: 16px;  
+            }
+        }
+        @include m1100 {
+            a {
+                font-size: 14px;  
+            }
+        }
         /*.................media.............*/
         @include m1000 { 
             display: block;
             height: 100%;
             overflow: scroll;
             position: relative;
+            margin: 40px auto; 
             li a  {   
                 margin: 0 0 20px 0;
-                line-height: 65px;
+                line-height: 35px;
                 border-top: 2px solid transparent;  
                 text-transform: uppercase;
-                &.active {color: #ECCC1D;}
+                color: #333; 
+                font-size: 16px; 
+                &.active {font-weight: 700 }
                 &:hover  {border-top: 2px solid $blue;}
             } 
         }
@@ -149,11 +206,11 @@ nav {
     display: none;
     width: 50px;
     height: 50px;
-    @include position(fixed, 15px, 15px, auto, auto);
+    @include position(fixed, 10px, 7px, auto, auto);
     margin: auto; 
     cursor: pointer;
     z-index: 100;
-    background-color: salmon;
+    background-color: $blue;
     border: none;
     -webkit-border-radius: 4px;
             border-radius: 4px;
@@ -199,7 +256,11 @@ nav {
     background-size: cover;
     padding: 200px 0 0 0;
     position: relative;
-
+    
+    @include m1000 {
+        height: auto;
+        padding: 0;  
+    }
 
     .wrapper {
         height: 100%;
@@ -207,6 +268,9 @@ nav {
         z-index: 2;
         position: relative;
         text-align: center;
+        @include m1000 {
+            padding: 120px 10px 80px;   
+        }
     }
     
     .blueInfo {
@@ -214,11 +278,29 @@ nav {
         color: $blue;  
         margin-bottom: 180px; 
         font: 32px $rm; 
+        @include m1000 {
+            font-size: 28px; 
+        }
+        @include m750 {
+            font-size: 24px; 
+        }
+        @include m600 {
+            font-size: 18px; 
+        }
     }
     .subTitle {
         margin-top: 30px; 
         color: #FFF; 
         font: 32px $rr; 
+        @include m1000 {
+            font-size: 28px; 
+        }
+        @include m750 {
+            font-size: 24px; 
+        }
+        @include m600 {
+            font-size: 18px; 
+        }
     }
 
     .offerForm {
@@ -236,6 +318,18 @@ nav {
             text-align: left;
             font: 19px $rm; 
         }
+        @include m800 {
+            width: 100%;
+            display: block;
+            p {
+                width: 100%; 
+                text-align: center;
+                margin-bottom: 20px; 
+            }  
+        }
+        @include m600 {
+            padding: 15px;   
+        }
     }
 }
 
@@ -247,6 +341,9 @@ nav {
         i {
             margin-left: 4px; 
         }  
+    }
+    @include m1100 {
+        width: 100%; 
     }
 }
 
@@ -272,6 +369,18 @@ nav {
         font: 19px $rm;
         border-bottom: 1px dashed $blue;  
     }
+    @include m1100 {
+        color: #333; 
+        text-align: center;
+        width: 100%; 
+        .tel { 
+            font-size: 18px;
+            color: #333; 
+        }
+        .order {
+            font-size: 16px;
+        }
+    }
 }
 
 /*=====================================================================================*/
@@ -279,6 +388,9 @@ nav {
 .about {
     .wrapper {
         width: 800px;
+        @include m800 {
+            width: 100%;  
+        }
     }
 }
 .aboutInfo {
@@ -326,6 +438,11 @@ nav {
             }
         }
     }
+    @include m600 {
+        &__item {
+            width: 100%; 
+        } 
+    }
 }
 
 
@@ -340,6 +457,9 @@ nav {
         position: relative;
         @extend %clearfix;
         width: 940px; 
+        @include m1000 {
+            width: 100%;  
+        }
         &:before {
             content: "";
             width: 2px;
@@ -350,6 +470,11 @@ nav {
             top: 0;  
             position: absolute;
             height: 100%;   
+        }
+        @include m750 {
+            &:before {
+                display: none;
+            } 
         }
     
         ul {
@@ -370,6 +495,20 @@ nav {
                 border-left: 5px solid $blue;
                 padding-left: 15px;  
                 margin-bottom: 28px; 
+            }
+            @include m1000 {
+               padding: 0 20px; 
+               h3 {
+                   font-size: 26px; 
+               }
+               li {
+                   font-size: 18px; 
+               }
+            }
+            @include m750 {
+                width: 100%;
+                padding: 0 0; 
+                margin-bottom: 40px  
             }
         }
     }
@@ -407,6 +546,21 @@ nav {
     p {
         margin-top: 30px;
         font-size: 32px;  
+    }
+    @include m750 {
+       h2, p {
+           font-size: 26px; 
+       }
+    }
+    @include m600 {
+       h2, p {
+           font-size: 22px; 
+       }
+    }
+    @include m500 {
+       h2, p {
+           font-size: 20px; 
+       }
     }
 }
 
@@ -475,6 +629,10 @@ nav {
                 }
             }
         }
+
+        @include m1000 {
+            margin-bottom: 30px;   
+        }
     }
 }
 
@@ -487,6 +645,10 @@ nav {
     background-size: cover;
     .wrapper {
         width: 940px; 
+        
+        @include m1000 {
+            width: 100%;  
+        }
 
         @media (max-width: 1200px) {
             width: 100%;
@@ -543,6 +705,23 @@ nav {
         &:last-of-type:after {
             display: none;
         }
+        @include m600 {
+            width: 100%;  
+            text-align: center;
+            &:after {
+                display: none;
+            }
+        }
+        @include m360 {
+            font-size: 18px; 
+            border: 1px solid rgba(0,0,0, .2);
+            -webkit-border-radius: 10px; 
+             border-radius: 10px;  
+            margin: 7px 0;
+            padding: 5px 0 7px;
+            -webkit-box-shadow: 0 0 8px rgba(0,0,0, .2); 
+              box-shadow: 0 0 8px rgba(0,0,0, .2);   
+        }
     }
 }
 .tabs {
@@ -570,7 +749,7 @@ nav {
             box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.15);
 
             @media (max-width: 800px) {
-                width: 350px;
+                width: 100%;
                 display: block;
                 margin: 0 auto 30px;
             }
