--- a/css/scss/base/_mixins.scss
+++ b/css/scss/base/_mixins.scss
@@ -261,12 +261,23 @@
   }
 }
 
+@mixin m500 {
+  @media (max-width: 500px) {
+    @content;
+  }
+}
+
 @mixin m600 {
   @media (max-width: 600px) {
     @content;
   }
 }
 
+@mixin m750 {
+  @media (max-width: 750px) {
+    @content;
+  }
+}
 
 @mixin m800 {
   @media (max-width: 800px) {
@@ -280,8 +291,20 @@
   }
 }
 
+@mixin m1100 {
+  @media (max-width: 1100px) {
+    @content;
+  }
+}
+
 @mixin m1200 {
   @media (max-width: 1200px) {
+    @content;
+  }
+}
+
+@mixin m1300 {
+  @media (max-width: 1300px) {
     @content;
   }
 }
