--- a/css/scss/general.scss
+++ b/css/scss/general.scss
@@ -521,12 +521,38 @@ nav {
     color: #FFF;
     padding: 0 18px;
     border: none;
+    position: relative;
+    overflow: hidden;
+    span {
+        z-index: 20;
+        color: #FFF;
+        margin-bottom: 0 !important;  
+      }
     box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.1);
     -webkit-border-radius: 4px; 
         border-radius: 4px;
+     &:after {
+        background: #fff;
+        content: "";
+        height: 155px;
+        left: -75px;
+        opacity: .4;
+        position: absolute;
+        top: -50px;
+        transform: rotate(35deg);
+        transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
+        width: 50px;
+        z-index: 0;
+      }
     &--wide {
         min-width: 260px; 
     }     
+    &:hover {
+        &:after {
+            left: 120%;
+            transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
+          }
+    }
 }
 
 /*=====================================================================================*/
