--- a/css/scss/general.scss
+++ b/css/scss/general.scss
@@ -98,11 +98,14 @@ h2 {
 /*  HEADER STYLES  */ 
          
 header {
-    @include position(absolute, 0, auto, auto, 0);
+    @include position(fixed, 0, auto, auto, 0);
     width: 100%;
     z-index: 100;
     margin: 0px;
     @include transition(all, .4s);
+    &.hasScrolled {
+        background-color: rgba(0,0,0, .6); 
+    }
     .wrapper {
         width: 1280px;
         @include flex();
@@ -160,7 +163,8 @@ nav {
             text-transform: uppercase;
             font-size: 17px; 
             @include transition(all, .2s);             
-            &:hover  {border-top: 2px solid $blue;}
+            &:hover,
+            &.active  {border-top: 2px solid $blue;}
         }
 
         /*.................media.............*/
