--- a/css/scss/base/_settings.scss
+++ b/css/scss/base/_settings.scss
@@ -19,7 +19,7 @@ $phones:						'max-width: 750px';
 
 // TYPOGRAPHIC
 // ---------------------------
-html, body                    	{   height: 100%; font-family: $rr;}
+body                    	{   height: 100%; font-family: $rr;}
 p                             	{   font-family: $rr; color: #333; }
 h1, h2, h3, h4, h5         	    {   font-family: $rm; color: #333;  }
 span                            {	color: #333;}
