--- a/css/scss/plugins/_slick-theme.scss
+++ b/css/scss/plugins/_slick-theme.scss
@@ -2,9 +2,9 @@
 
 // Default Variables
 
-$slick-font-path: "plugins/fonts/" !default;
-$slick-font-family: "slick" !default;
-$slick-loader-path: "plugins/" !default;
+$slick-font-path: "scss/plugins/fonts/" !default;
+$slick-font-family: "scss/slick" !default;
+$slick-loader-path: "scss/plugins/" !default;
 $slick-arrow-color: white !default;
 $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
